deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: bashofmann/rancher-demo:1.0.0
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 8080
            name: web
            protocol: TCP
          readinessProbe:
            httpGet:
              port: web
              path: /
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: default
spec:
  type: NodePort
  selector:
    app: hello-world
  ports:
    - name: web
      port: 80
      targetPort: web
      nodePort: 30001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hellow-world-ing
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: hello-world-svclb
              port:
                number: 8080
